
21. Fix (Terry Droeger): Julian dates finished and working correctly.

22. Fix (Terry Droeger): Argument count (in CGI) calls CGI argument count explicitly.

23. Fix (Terry Droeger): Removed extraneous references to gnat.cgi from two files.  This should fix the CGI POST issues, but both CGI libraries should not be installed at the same time as both read from standard input when they elaborate.  Confirmed CGI POST is now working.

24. New (Terry Droeger): OpenGL can be disabled with --without-opengl.

25. Change: AdaCGI package rewritten to defer reading standard input.

26. New: dbm package.  connect, append, prepare, append_line, append_quoted, execute, execute_checked, disconnect, is_connected, reset, error_message, databases, in_abort_state, options, set_rollback_on_finalize, open_db_trace, will_rollback_on_finalize, close_db_trace,  set_trace, is_trace, clear, raise_exceptions, report_errors, begin_work, rollback_work, commit_work, rewind, fetch, end_of_query, tuple, tuples, columns, column_name, column_index, is_null, value, engine_of, show, list, schema, users, new_connection, new_query, fetch_values, notice_message, append_for_insert, append_for_update.

27. Change: Refactoring done to database packages.  db.reset not working, not sure why.

28. New (Jedi Tek'unum): Initial support for Darwin (OS/X)...not fully implemented, doesn't build yet.

29. New. renames (identifier dereferencing)...variable declaration renaming.  [tests needed] [renamings of proc, funcs, aggregate elements] [env needs updating for renamings] [unset needs updating for renamings]
Examples:
   j : integer renames i;
   b : arrtype renames a;
   s : rectype renames r;

30. New: experimental support for in, out and in out parameters in user-defined functions and procedures.  Note that only identifier names, not references to elements of arrays or records, are supported. [tests needed][unset needs updating]

[David B wants shared library]
